[project]
name = "reinforcement-learning-cartpole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.0",
    "jupyter>=1.1.1",
    "keras>=3.11.1",
    "matplotlib>=3.10.5",
    "tensorflow==2.19.0",
    "torch>=2.8.0",
]
